--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="/placeholder.svg" />
+
+  <!-- Script para prevenir FOUC (Flash of Unstyled Content) -->
+  <script>
+    (function() {
+      try {
+        const storedSettings = localStorage.getItem('alignwork:settings');
+        const theme = storedSettings
+          ? (JSON.parse(storedSettings).theme || 'system')
+          : 'system';
+        
+        const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const resolvedTheme = theme === 'system' ? (systemDark ? 'dark' : 'light') : theme;
+        
+        if (resolvedTheme === 'dark') {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      } catch (error) {
+        // Se houver erro ao ler localStorage, manter tema claro por padrão
+        document.documentElement.classList.remove('dark');
+      }
+    })();
+  </script>
 </head>
 
 <body>
